fixed spacing issues and made minor style edits to all sections

--- a/styles/_aboutMe.scss
+++ b/styles/_aboutMe.scss
@@ -1,13 +1,13 @@
 
 .aboutMe {
-  min-height: 100vh;
+  height: 110vh;
   padding: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
   .greenBox {
   width: 100%;
-  height: 1000px;
+  height: 90%;
   background-color: $accentColorOne;
   display: flex;
   flex-direction: column;
@@ -18,10 +18,9 @@
   border: 1px solid $outlineColor;
   border-radius: 50px;
   .greenBoxContent {
-    padding-left: 8%;
-    width: 70%;
+    width: 80%;
+    padding: 10% 10% 10% 10%;
       h2 {
-        padding: 20% 0 40px 16%;
         font-family: $h2Font;
         font-weight: 400;
         font-size: 4rem;
@@ -29,7 +28,7 @@
         line-height: 4rem;
       }
       p {
-        padding: 5% 200px 100px 16%;
+        margin-top: 50px;
         font-family: $bodyFont;
         font-size: 2.5rem;
         font-weight: 100;
@@ -48,10 +47,9 @@
           font-size: 1.5rem;
           font-weight: 100;
           cursor: pointer;
-          margin-top: 2px;
           height: 80px;
           align-items: center;
-          margin-left: 16%;
+          margin-top: 50px;
         }
         button:hover {
           background-color: $outlineColor;
@@ -65,19 +63,19 @@
   }
 
   div.circle img {
-    width: 450px;
-    height: 450px;
+    width: 360px;
+    height: 360px;
     position: absolute;
-    top: 120px;
+    top: 150px;
     left: -50px;
     border-radius: 50%;
     border: 1px solid $outlineColor;
   }
 
   div.square img {
-    width: 600px;
+    width: 400px;
     position: absolute;
-    bottom: 50px;
+    bottom: 150px;
     right: -50px;
     border: 1px solid $outlineColor;
     border-radius: 50px;
