--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -20,6 +20,7 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+    transition: transform .2s; 
     width: 200px;
     height: 200px;
     padding: 180px;
@@ -34,6 +35,9 @@
       font-size: 6rem;
       }
     }
+    li:hover {
+    transform: scale(1.2);
+  }
   } 
 }
 
