--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -1,5 +1,5 @@
 .work {
-  height: 100vh;
+  height: 130vh;
   width: 100%;
   a {
     color: $outlineColor;
@@ -25,6 +25,7 @@
     font-size: 2rem;
     font-weight: 100;
     color: $outlineColor;
+    width: 60%;
   }
   }
   .workSamples {
@@ -41,13 +42,15 @@
       height: 80%;
       border: 1px solid $outlineColor;
       border-radius: 50px;
-      // margin: 20px;
       display: flex;
       flex-direction: column;
       background-color: $accentColorTwo;
       img {
-        max-width: 100%;
+        width: 100%;
         height: 40%;
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+        border-bottom: 1px solid $outlineColor;
       }
       .description {
         height: 50%;
